Add global styles

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,1 +1,13 @@
 @import url('./normalize.css');
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  min-height: 100vh;
+}
