--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('./normalize.css');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 *,
 *::before,
@@ -8,3 +9,8 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Poppins-Regular', sans-serif;
+  font-weight: 400;
+  background: #f2f2f2;
+}
