--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: 'Poppins-Regular', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   background: #f2f2f2;
 }
