--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -61,13 +61,15 @@
   padding: 15px 20px;
   font-size: 0.938rem;
   color: #fff;
-  background: rgb(33, 212, 253);
-  background: linear-gradient(
-    90deg,
-    rgba(33, 212, 253, 1) 4%,
-    rgba(33, 152, 253, 1) 36%,
-    rgba(183, 33, 255, 1) 97%
+  background-size: 300% 100%;
+  background-image: linear-gradient(
+    to right,
+    #667eea,
+    #764ba2,
+    #6b8dd6,
+    #8e37d7
   );
+  transition: all 0.4s ease-in-out;
   text-transform: uppercase;
   border: none;
   border-radius: 25px;
@@ -93,12 +95,17 @@ a {
 /* Pseudo */
 
 .button:active {
-  filter: brightness(90%);
+  filter: brightness(80%);
+}
+
+.button:hover {
+  background-position: 100% 0;
+  transition: all 0.4s ease-in-out;
 }
 
 .button:disabled {
   filter: grayscale(50%);
-  cursor: default;
+  pointer-events: none;
 }
 
 a:hover {
